feat: implement add and remove relays

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,9 +1,11 @@
 {
   "alert_dialog": {
+    "add": "Add",
     "cancel": "Cancel",
     "clear": "Clear",
     "confirm": "Confirm",
-    "confirm_action_title": "Confirm Action"
+    "confirm_action_title": "Confirm Action",
+    "websocket_url": "Websocket URL"
   },
   "amount": "amount",
   "auth": {
